force-app/main/default/objects/cdcpc__PCLCustomObject__c/cdcpc__PCLCustomObject__c.object-meta.xml
<CustomObject>
    <label>PCLCustomObject</label>
    <nameField>
        <displayFormat>ZZZ-{0000}</displayFormat>
        <label>PCLCustomObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PCLCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>