force-app/main/default/objects/cdcpc__PCLCustomObject__c/fields/cdcpc__EO_Has_Engineering_Override__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_Has_Engineering_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Engineering Override</label>
    <type>Checkbox</type>
</CustomField>