force-app/main/default/objects/cdcpc__PCLCustomObject__c/fields/cdcpc__EO_OA__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_OA__c</fullName>
    <label>OA Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>