force-app/main/default/objects/cdcpc__PCLCustomObject__c/fields/cdcpc__Lookup_OW__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Lookup_OW__c</fullName>
    <label>Lookup OW</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>