force-app/main/default/objects/cdcpc__PCLCustomObject__c/fields/cdcpc__OW__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OW__c</fullName>
    <label>OW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>