force-app/main/default/objects/cdcpc__PCLCustomObject__c/fields/cdcpc__Part_Number_Base__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Part_Number_Base__c</fullName>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>