force-app/main/default/objects/cdcpc__PCLCustomObject__c/recordTypes/cdcpc__Configured_Part.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Configured_Part</fullName>
    <active>true</active>
    <label>Configured Part</label>
</RecordType>