force-app/main/default/objects/cdcpc__PCLCustomObject__c/recordTypes/cdcpc__Part_Configurator_Instance.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Part_Configurator_Instance</fullName>
    <active>true</active>
    <label>Part Configurator Instance</label>
</RecordType>