force-app/main/default/objects/cdcpc__PCLCustomObject__c/recordTypes/cdcpc__Sizing_Request.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Sizing_Request</fullName>
    <active>true</active>
    <label>Sizing Request</label>
</RecordType>