force-app/main/default/objects/cdcpc__PCLCustomObject__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>